# svg_ultralight

./: .gitignore  .pre-commit-config.yaml  .vimrc  .vimspector.json  Pipfile  README.md  __init__.py  dev-requirements.txt  pyproject.toml  release_notes.md  requirements.txt  setup.py  svg_ultralight.py  svg_writer.py  test_svg_writer.py  tox.ini
.github/workflows/: pypi-project.yml
constructors/: __init__.py  new_element.py
experiments/: encode_fonts3.py
src/svg_ultralight/: __init__.py  animate.py  attrib_hints.py  image_ops.py  import_svg.py  inkscape.py  layout.py  main.py  metadata.py  nsmap.py  pad_argument.py  py.typed  query.py  read_svg.py  reuse_paths.py  root_elements.py  string_conversion.py  transformations.py  unit_conversion.py
src/svg_ultralight/bounding_boxes/: __init__.py  bound_helpers.py  padded_text_initializers.py  supports_bounds.py  type_bound_collection.py  type_bound_confederation.py  type_bound_element.py  type_bound_federation.py  type_bound_list.py  type_bounding_box.py  type_padded_list.py  type_padded_text.py
src/svg_ultralight/constructors/: __init__.py  new_element.py
src/svg_ultralight/font_tools/: __init__.py  align_text.py  comp_results.py  font_css.py  font_info.py  font_metrics.py  globs.py
src/svg_ultralight/strings/: __init__.py  svg_strings.py
svg_ultralight/: __init__.py  animate.py  changes  nsmap.py  query.py  string_conversion.py  svg_ultralight.py
svg_ultralight/constructors/: __init__.py  new_element.py
svg_ultralight/strings/: __init__.py  svg_strings.py
test/: conftest.py  test_new_element.py  test_queries.py  test_svg_ultralight.py
tests/: __init__.py  conftest.py  test_bound_element.py  test_bounding.py  test_font_info.py  test_image_ops.py  test_import_svg.py  test_inkscape.py  test_justification.py  test_layout.py  test_matrices.py  test_metadata.py  test_new_element.py  test_padded_list.py  test_padded_text_initializers.py  test_padding.py  test_parse.py  test_queries.py  test_read_svg.py  test_root_elements.py  test_string_conversion.py  test_svg_ultralight.py
typings/pyphen/: __init__.pyi
