[project]
name = "svg-ultralight"
version = "0.80.0"
description = "a sensible way to create svg files with Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shay Hill", email = "shay_public@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cssutils>=2.11.1",
    "fonttools>=4.60.1",
    "lxml>=6.0.2",
    "paragraphs>=1.0.1",
    "pillow>=11.3.0",
    "svg-path-data>=0.5.3",
    "types-lxml>=2025.8.25",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen",
    "pre-commit",
    "pytest",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.80.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["tests"]
log_cli = 1

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D", "F401"]  # Ignore assertions, docstrings, unused imports in test files

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.10"
pythonPlatform = "Any"

typeCheckingMode = "strict"
# reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./.venv"
