[project]
name = "svg-ultralight"
version = "0.106.0"
description = "a sensible way to create svg files with Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ShayHill", email = "shay_public@hotmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "cssutils>=2.11.1",
    "fonttools>=4.60.1",
    "lxml>=6.0.2",
    "paragraphs>=1.0.1",
    "pillow>=11.3.0",
    "pyphen>=0.17.2",
    "svg-path-data>=0.5.3",
    "types-lxml>=2025.8.25",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["commitizen", "pre-commit", "pytest"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.106.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


# [tool.isort]
# profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = "tests"
testpaths = ["tests"]
log_cli = true


[tool.ruff]
target-version = "py310"
exclude = ["typings", ".venv"]
[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "D",
    "F401",
] # Ignore assertions, docstrings, unused imports in test files

[tool.ruff.format]
docstring-code-line-length = 88
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
# keep isort consistent with format.skip-magic-trailing-comma
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
# only auto-fix __all__ sorting (RUF022) and import sorting (I)
fixable = ["RUF022", "I"]
ignore = [
    "COM812",  # trailing comma missing (does not agree with Black)
    "D203",    # 1 blank line before class docstring (incompatible with D211)
    "D213",    # multi-line summary second line (incompatible with D212)
    "ISC003",  # explicitly concatenated string should be implicit
    "ANN401",  # Any type disallowed (need Any for fonttools)
    "S301",    # don't use pickle
    "PLR2004", # magic value used in comparison
    "S603",    # subprocess call: untrusted input
    "SIM108",  # insists on ternary operator
    "PTH108",  # os.unlink should be replaced by .unlink()
    "PLR0913", # too many arguments to function call
    "PGH003",  # use specific rule codes when ignoring type issues
    "FLY",     # consider f-string
    "N802",    # function name should be lowercase (font_info magic)
    "PLR0911", # too many return statements (MeasurementArgs)
    "SLF001",  # private member accessed
    "B019",    # memory leak warning for lru_cache
    "S311",    # pseudo-random generators should not be used for security purposes
]


[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__.py"]
ignore = ["typings", ".venv"]

pythonVersion = "3.10"
pythonPlatform = "All"

typeCheckingMode = "strict"

reportPrivateUsage = false
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./.venv"

[[tool.pyright.executionEnvironments]]
root = "tests"
